# ai-operations-assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  evals.yml
docs/: architecture.md  eval-report.md  portfolio-case.md
docs/adr/: 0001-server-owns-risk.md  0002-storage-seams.md  0003-dataflow-declared-deps.md  0004-append-only-audit-and-redaction.md  0005-single-process-locking.md  README.md
docs/design/: stage-2-persistence.md
evals/: golden.py  planner_live.py  run.py
knowledge_base/: communication.md  returns.md  sla.md
ops_assistant/: __init__.py  __main__.py  approval.py  audit.py  config.py  dataflow.py  errors.py  factory.py  gateway.py  models.py  observability.py  policy.py  service.py  state.py  store.py  workflow.py
ops_assistant/api/: app.py
ops_assistant/gworkspace/: __main__.py  auth.py  clients.py  freebusy.py  live.py  tools.py
ops_assistant/knowledge/: base.py  tools.py
ops_assistant/n8n/: client.py  live.py  tools.py
ops_assistant/persistence/: postgres.py  schema.py
ops_assistant/planner/: base.py  demo.py  llm.py  openai_client.py
ops_assistant/telegram/: __main__.py  bot.py  ratelimit.py  runner.py  transport.py
ops_assistant/tools/: registry.py  sandbox.py
scripts/: demo.py
tests/: test_api.py  test_approval.py  test_audit.py  test_config.py  test_dataflow.py  test_evals.py  test_freebusy.py  test_gateway.py  test_gworkspace.py  test_knowledge.py  test_llm_planner.py  test_models.py  test_n8n.py  test_observability.py  test_planner.py  test_policy.py  test_ratelimit.py  test_service.py  test_telegram.py  test_telegram_transport.py  test_tools.py  test_workflow.py
tests/integration/: test_postgres.py
