[project]
name = "ai-operations-assistant"
version = "0.1.0"
description = "NL business requests to a server-validated action plan; the model proposes, the server decides what runs"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",       # API layer
    "google-api-python-client>=2.100",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "httpx>=0.27",          # Telegram Bot API client
    "openai>=1.50",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",        # strict data contracts everywhere
    "pydantic-settings>=2.5", # env-driven config
    "sqlalchemy>=2.0",
    "uvicorn>=0.30",        # ASGI server for `serve`
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "httpx2>=2.7.0",        # FastAPI TestClient transport
    "testcontainers>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["ops_assistant", "scripts"]

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google_auth_oauthlib.*", "google.auth.*", "google.oauth2.*"]
ignore_missing_imports = true

# The Google SDK adapters wrap partially-typed third-party calls; relax the two
# strict checks that clash with it, only for these I/O modules.
[[tool.mypy.overrides]]
module = ["ops_assistant.gworkspace.auth", "ops_assistant.gworkspace.live"]
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires a live Postgres (Docker/testcontainers); excluded from the default run",
]

[tool.coverage.run]
omit = [
    "ops_assistant/__main__.py",           # server entrypoint, exercised by running
    "ops_assistant/persistence/*",         # covered by the integration suite (needs Postgres)
    "ops_assistant/factory.py",            # Postgres wiring, covered by the integration suite
    "ops_assistant/telegram/__main__.py",  # bot entrypoint
    "ops_assistant/gworkspace/auth.py",    # Google OAuth I/O
    "ops_assistant/gworkspace/live.py",    # live Gmail/Calendar API I/O
    "ops_assistant/gworkspace/__main__.py",  # auth entrypoint
    "ops_assistant/planner/openai_client.py",  # live OpenAI-compatible LLM I/O
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
